# coursework

./: AGENTS.md  CMakeLists.txt  prompt.txt  suai_rules.txt
.github/agents/: coder.agent.md  orchestrator.agent.md  qa.agent.md  verificator.agent.md  writer.agent.md
.github/agents/instructions/: cpp-implementation.md  csharp-implementation.md
docs/: 1.typ  2.typ  3.typ  4.typ  5.typ  demo.typ  index.typ
docs/lib/: gost.typ
